<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvPlanNo"
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dip" >

            <TextView
                style="@style/Divider"
                android:text="@string/plan_nm" />

            <EditText
                android:id="@+id/etPlanNm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:layout_marginTop="8dip"
                android:background="@android:drawable/edit_text"
                android:inputType="text"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                style="@style/Divider"
                android:layout_marginTop="10dip"
                android:text="@string/period" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvPlanStdt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dip"
                    android:paddingRight="3dip"
                    android:text="@string/tilde"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvPlanEddt"
                    style="@style/Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <TextView
                style="@style/Divider"
                android:layout_marginTop="10dip"
                android:text="@string/plan_on_weekday" />

            <LinearLayout
                android:id="@+id/layOnWeekDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="6dip"
                android:paddingRight="6dip"
                android:paddingTop="6dip" >

                <CheckBox
                    android:id="@+id/chkOnMonYn"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/checkbox_button"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:paddingBottom="11dip"
                    android:text="@string/monday"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/chkOnTueYn"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/checkbox_button"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:paddingBottom="11dip"
                    android:text="@string/tuesday"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/chkOnWedYn"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/checkbox_button"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:paddingBottom="11dip"
                    android:text="@string/wednesday"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/chkOnThuYn"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/checkbox_button"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:paddingBottom="11dip"
                    android:text="@string/thursday"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/chkOnFriYn"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/checkbox_button"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:paddingBottom="11dip"
                    android:text="@string/friday"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/chkOnSatYn"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/checkbox_button"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:paddingBottom="11dip"
                    android:text="@string/saturday"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/chkOnSunYn"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/checkbox_button"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:paddingBottom="11dip"
                    android:text="@string/sunday"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <TextView
                style="@style/Divider"
                android:layout_marginTop="10dip"
                android:text="@string/plan_on_holiday" />

            <CheckBox
                android:id="@+id/chkOnHolidayYn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dip"
                android:layout_marginTop="6dip"
                android:background="@drawable/checkbox_button"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:paddingBottom="11dip"
                android:text="@string/plan_on_holiday_yes"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/button_cancel_save" />

</LinearLayout>