<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 계정명 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/account_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:gravity="center_vertical"
            android:paddingEnd="16dp"
            android:paddingStart="@dimen/padding_label3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FF000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 아이디 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/id"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/login_id"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/login_id"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:gravity="center_vertical"
            android:paddingEnd="16dp"
            android:paddingStart="@dimen/padding_label3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FF000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <!-- 비밀번호 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            app:layout_constraintTop_toBottomOf="@+id/login_id" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/password"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/login_password"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:gravity="center_vertical"
            android:paddingEnd="16dp"
            android:paddingStart="@dimen/padding_label4"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FF000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_id" />

        <!-- 주소 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            app:layout_constraintTop_toBottomOf="@+id/login_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/url"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBaseline_toBaselineOf="@+id/url"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/url"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:autoLink="web"
            android:gravity="center_vertical"
            android:paddingEnd="16dp"
            android:paddingStart="@dimen/padding_label2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FF000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password" />

        <!-- 비고 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            app:layout_constraintTop_toBottomOf="@+id/url" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="top"
            android:hint="@string/description"
            android:padding="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FF000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/url" />
    </android.support.constraint.ConstraintLayout>
</layout>